tests/async_iteration/async_iteration.exp
Error: delegate_yield.js:7
  7: delegate_next().next(0);
     ^^^^^^^^^^^^^^^^^^^^^^^ call of method `next`
  3:     var x: void = yield; // error: number ~> void
                       ^^^^^ number. This type is incompatible with
  3:     var x: void = yield; // error: number ~> void
                ^^^^ undefined

Error: delegate_yield.js:17
 17:     (x: void); // error: number ~> void
          ^ number. This type is incompatible with
 17:     (x: void); // error: number ~> void
             ^^^^ undefined

Error: delegate_yield.js:25
 25:   var x: void = yield *inner(); // error: number ~> void
                     ^^^^^^^^^^^^^^ number. This type is incompatible with
 25:   var x: void = yield *inner(); // error: number ~> void
              ^^^^ undefined

Error: generator.js:23
 23:     (line: void); // error: string ~> void
          ^^^^ string. This type is incompatible with
 23:     (line: void); // error: string ~> void
                ^^^^ undefined

Error: return.js:6
  6:   (result.value: void); // error: string | number ~> void
        ^^^^^^^^^^^^ number. This type is incompatible with
  6:   (result.value: void); // error: string | number ~> void
                      ^^^^ undefined

Error: return.js:6
  6:   (result.value: void); // error: string | number ~> void
        ^^^^^^^^^^^^ string. This type is incompatible with
  6:   (result.value: void); // error: string | number ~> void
                      ^^^^ undefined

Error: return.js:20
 20:     (result.value: string); // error: number | void ~> string
          ^^^^^^^^^^^^ number. This type is incompatible with
 20:     (result.value: string); // error: number | void ~> string
                        ^^^^^^ string

Error: return.js:20
 20:     (result.value: string); // error: number | void ~> string
          ^^^^^^^^^^^^ undefined. This type is incompatible with
 20:     (result.value: string); // error: number | void ~> string
                        ^^^^^^ string

Error: throw.js:12
 12:       (value: void); // error: number ~> void
            ^^^^^ number. This type is incompatible with
 12:       (value: void); // error: number ~> void
                   ^^^^ undefined

Error: throw.js:29
 29:       (value: void); // error: number ~> void
            ^^^^^ number. This type is incompatible with
 29:       (value: void); // error: number ~> void
                   ^^^^ undefined


Found 10 errors
